[package]
name = "socket"
version = "0.1.0"
authors = ["sajjad"]
edition = "2018"

[profile.release]
opt-level = 's'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false


[dependencies]
# openssl="0.10"
# tokio-openssl="0.3"
tokio="0.1"
rlua="0.16"
futures="0.1"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
